Bug 1502147 - Add ability to collapse pushes

--- a/ui/css/treeherder-resultsets.css
+++ b/ui/css/treeherder-resultsets.css
@@ -3,10 +3,7 @@
  */
 
 .push-bar {
-  border-top: 1px solid black;
-  padding: 2px 0 1px 34px;
   white-space: nowrap;
-  display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
@@ -27,7 +24,6 @@
 }
 
 .push-body-divider {
-  margin-left: 34px;
   border-bottom: 1px solid lightgrey;
 }
 
@@ -119,10 +115,6 @@ th-action-button .btn-push {
   display: block;
 }
 
-.push .revision-list {
-  padding-left: 15px;
-}
-
 /*
  * Revision list
  */
@@ -138,7 +130,6 @@ th-action-button .btn-push {
 
 .revision {
   font-size: 12px;
-  padding-top: 2px;
   overflow: auto;
 }
 
@@ -152,7 +143,6 @@ th-action-button .btn-push {
 }
 
 .revision-holder {
-  padding-left: 20px;
   padding-right: 6px;
   display: inline-block;
 }
